<resources>
    <string name="app_name">SenderNT</string>
    <string name="no_data">No data</string>
    <string name="preferences_for_telegram">Please specify the settings for Telegram</string>
    <string name="allow_notifications">Allow access to notifications</string>
    <string name="preferences">Service settings:</string>
    <string name="go_to_preferences">Go to settings</string>
    <string name="big_main_text">The application forwards all notifications from your phone to Telegram via a bot. Note: The Telegram Bot API token and the chat ID must be specified during the application setup. Additionally, you will soon be able to filter and forward notifications only from selected apps. The application requires permissions to access the network and notifications.</string>
    <string name="service_off">Service is off</string>
    <string name="service_on">Service is on</string>
    <string name="full_name">Sender Notification to Telegram</string>
    <string name="main_name">SenderNT</string>
    <string name="back_btn">Back</string>
    <string name="apps">Applications</string>
    <string name="battery_optimization_btn">Disable battery optimization</string>
    <string name="save">Save</string>
    <string name="id_chat_textview">Enter your chat ID</string>
    <string name="id_telegram_bot_textview">Enter the Telegram bot API key</string>
    <string name="permission_granted">Permission already granted</string>
    <string name="enter_all_fields">Please fill in both fields correctly</string>
    <string name="data_saved">Data saved</string>
    <string name="short_instruction">To obtain your Telegram chat ID, go to the bot @get_id_bot.\n\nTo obtain the API key for the Telegram bot, go to the bot @BotFather.\n\nAfter receiving the necessary data, enter it in the corresponding fields.</string>
    <string name="ok">Understood</string>
    <string name="instruction">Instructions</string>
    <string name="long_instruction">Steps to set up the application:\n\n1. Press the central button to grant permission to access all notifications.\n2. After that, click the #Go to settings# button.\n3. Enter the chat ID and the API key for the Telegram bot, then save the data by pressing the #Save# button.\n4. In the same window, go to the #Applications# section and select which applications you want to forward notifications from.\n5. Returning to the main screen, press the #Enable service# button.\n\nTo obtain your Telegram chat ID, go to the bot @get_id_bot:\n- Open Telegram and search for @get_id_bot.\n- Start a chat with the bot and follow the instructions to get your chat ID.\n\nTo obtain the API key for the Telegram bot, go to the bot @BotFather:\n- Open Telegram and search for @BotFather.\n- Start a chat with the bot and follow the instructions to create a new bot. After creation, you will receive an API key.\n\nAfter receiving the necessary data, enter it in the corresponding fields.</string>
    <string name="text1">Switcher for</string>
    <string name="text3">Changed</string>
    <string name="system_apps">All Apps</string>
    <string name="about">About</string>
    <string name="legals">
        "\n
        The application is designed to save and forward smartphone notifications to a Telegram chat. \n
        Its use is allowed only on the user's own devices and is strictly prohibited for spying on other people.\n
        \n
        Legal disclaimer:\n
        The developer is not responsible for any improper use of the application. \n
        The user uses the application at their own risk and agrees not to use it for purposes that violate the law, \n
        infringe on the rights and freedoms of others, or engage in illegal activities.\n
        \n
        Using this application implies acceptance of the stated terms.\n
        "
    </string>
    <string name="github_https_github_com_wizand0">Author GitHub: https://github.com/wizand0/</string>
    <string name="github_https_github_com_wizand0_sendernt">Project GitHub: https://github.com/wizand0/SenderNT</string>
    <string name="wizand0">Author: Wizand0</string>
    <string name="email_makandrei_gmail_com">Email: makandrei@gmail.com</string>
    <string name="donate">Donate:</string>
    <string name="search">Search</string>
    <string name="all_apps">All Apps</string>
    <string name="main">Main</string>
    <string name="prefsActivityName">Preferences</string>
    <string name="service_status">Start service</string>
    <string name="enter_bot_id_error">Enter bot id</string>
    <string name="enter_chat_id_error">Enter chat id</string>
    <string name="test">Test</string>
    <string name="data_send">Data send</string>
    <string name="feedback_mail_text">App Feedback</string>
    <string name="feedback_body_mail">"\n        Write your feedback here…\n\n        --------------------------\n        Device Information:\n        %1$s\n    "</string>
    <string name="feedback_dialog">Do you like our app? Please leave a review on Google Play or send us your suggestions to improve functionality.</string>
    <string name="enter_feedback">Write Feedback</string>
    <string name="abort">Cancel</string>
    <string name="feedback_title">Leave Feedback</string>
    <string name="market" translatable="false">Market</string>
    <string name="choose_market">Choose market</string>
    <string name="not_found">Market not found</string>
    <string name="feedback_title_dialog">Оцените наше приложение</string>
    <string name="feedback_body_dialog">Если вам нравится приложение, оставьте, пожалуйста, отзыв. Это не займет много времени.</string>
    <string name="ask_later">Спросить позднее</string>
    <string name="enable_notification_access">Allow notification access</string>
    <string name="toggle_notification_service">Notification service</string>
    <string name="button_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="test_message">Test Message ✅</string>

</resources>
