<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <!-- Заголовок диалога -->
    <TextView
        android:id="@+id/textViewDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Прокручиваемая область для длинного текста -->
    <ScrollView
        android:id="@+id/scrollViewInstruction"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:fillViewport="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintTop_toBottomOf="@id/textViewDialogTitle"
        app:layout_constraintBottom_toTopOf="@+id/btnDialogOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewInstructionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textAppearance="?attr/textAppearanceBody1"
            android:text="@string/short_instruction" />
    </ScrollView>

    <!-- Кнопка для закрытия диалога -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialogOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollViewInstruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
