<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- AppBarLayout для поддержки Material-дизайна -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingTop="16dp"
            app:popupTheme="@style/MyPopupMenu"
            app:title="@string/prefsActivityName" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="60dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".presentation.SettingsGlobalActivity">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBatteryOptimization"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/battery_optimization_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnApps"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/apps"
                app:layout_constraintTop_toBottomOf="@id/btnBatteryOptimization"
                app:layout_constraintStart_toStartOf="@id/btnBatteryOptimization"
                app:layout_constraintEnd_toEndOf="@id/btnBatteryOptimization"/>

            <!-- Группировка textInputLayoutBot, editTextBotID и buttonOpenBotFather через MaterialCardView -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardBotGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnApps">

                <!-- Внутренний ConstraintLayout для позиционирования элементов внутри карточки -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/botGroupContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutBot"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/id_telegram_bot_textview"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextBotID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/buttonOpenBotFather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@null"
                        android:contentDescription="@string/id_telegram_bot_textview"
                        android:padding="8dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:src="@drawable/open_app"
                        app:layout_constraintBottom_toBottomOf="@id/textInputLayoutBot"
                        app:layout_constraintStart_toEndOf="@id/textInputLayoutBot"
                        app:layout_constraintTop_toTopOf="@id/textInputLayoutBot" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardChatGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardBotGroup">

                <!-- Внутренний ConstraintLayout для позиционирования элементов внутри карточки -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/chatGroupContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutChat"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/id_chat_textview"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextChatID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/buttonOpenGetIdBot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@null"
                        android:contentDescription="@string/id_chat_textview"
                        android:padding="8dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:src="@drawable/open_app"
                        app:layout_constraintBottom_toBottomOf="@id/textInputLayoutChat"
                        app:layout_constraintStart_toEndOf="@id/textInputLayoutChat"
                        app:layout_constraintTop_toTopOf="@id/textInputLayoutChat" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTest"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:clickable="false"
                android:text="@string/test"
                app:layout_constraintEnd_toStartOf="@+id/buttonSave"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardChatGroup" />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="@+id/buttonTest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonTest"
                app:layout_constraintTop_toTopOf="@+id/buttonTest"
                app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.yandex.mobile.ads.banner.BannerAdView
        android:id="@+id/banner_ad_view"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom"
        android:foregroundGravity="center_horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttonTest" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


